Tarea bootstrap actualizada

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
     </div> -->
     <!--nuevo grid-->
-    <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
+    <ul class="nav nav-tabs justify-content-center my-4" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
             <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
                 role="tab" aria-controls="home" aria-selected="true">
@@ -154,157 +154,98 @@
     <div class="tab-content container" id="myTabContent">
         <div class="tab-pane fade show active row" id="home" role="tabpanel" aria-labelledby="home-tab">
             <!--nuevas cartas-->
-            <!-- <div class="card1 col p-0 m-1"></div>
-            <div class="card-body1">
-                <p class="card-text">My crazy dog spark</p>
-                <span>8/26</span>
-            </div>
-            <img src="https://media.istockphoto.com/id/2151018944/photo/hertford-bridge-best-known-as-the-bridge-of-sighs-in-oxford-england.webp?b=1&s=612x612&w=0&k=20&c=jnukvB1j9_CnA7X3GxXaZutCPAjYAj5Vz71DGf6tLd0="
-                class="card-img-top img-fluid" alt="...">
-            <div class="card-body2">
-                <p class="card-text"><b>204 likes</b>
-                    <br>
-                    This is an example of a very good photo that you can post on Instagram
-                </p>
-            </div>
-            <div class="card2 col p-0 m-1">
-                <div class="card-body1">
-                    <p class="card-text">My crazy dog spark</p>
-                    <span>8/26</span>
-                </div>
-                <img src="https://img.freepik.com/foto-gratis/desarrollar-plantilla-web-codificacion-diseno-web-codificacion_53876-167109.jpg?t=st=1724887018~exp=1724890618~hmac=de139dca282a3188b130498bb8c4cf172789152fd0998f67bbf2963aab117aa3&w=740"
-                    class="card-img-top" alt="...">
-                <div class="card-body2">
-                    <p class="card-text"><b>204 likes</b>
-                        <br>
-                        This is an example of a very good photo that you can post on Instagram
-                    </p>
-                </div>
-            </div>
-            <div class="card3 col p-0 m-1">
-                <div class="card-body1">
-                    <p class="card-text">My crazy dog spark</p>
-                    <span>8/26</span>
-                </div>
-                <img src="https://media.istockphoto.com/id/660776062/photo/chinese-asian-style-concrete-white-footbridge-over-river-in-public-oriental-gardens-on-sunny.webp?s=612x612&w=0&k=20&c=KeLVQjuOz409EVAU_uen1hCroTFogyZDlyIVCC7MyKw="
-                    class="card-img-top" alt="...">
-                <div class="card-body2">
-                    <p class="card-text"><b>204 likes</b>
-                        <br>
-                        This is an example of a very good photo that you can post on Instagram
-                    </p>
-                </div>
-            </div>
-        </div> -->
+
             <div class="card-group">
-                <div class="card p-2">
+                <div class="card p-0 m-2">
                     <img src="https://hips.hearstapps.com/hmg-prod/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=0.752xw:1.00xh;0.175xw,0&resize=1200:*"
                         class="card-img-center" alt="...">
-                    <div class="card-body">
-                    </div>
                 </div>
-                <div class="card p-2">
+                <div class="card p-0 m-2">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTE4eQ_cX94YuY4qLwKN1z_cKQaxOGydndQfg&s"
                         class="card-img-top" alt="...">
-                    <div class="card-body">
-                    </div>
                 </div>
-                <div class="card p-2">
+                <div class="card p-0 m-2">
                     <img src="https://puntogar.com/5065-large_default/esbd-estor-fotografico-screen-fibra-vidrio-5-sistema-38-y-43-mm-a-medida.jpg"
                         class="card-img-top" alt="...">
-                    <div class="card-body">
-                    </div>
                 </div>
             </div>
             <div class="card-group">
-                <div class="card p-2">
+                <div class="card p-0 m-2">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJll9sX91OnYxzJ_buaSc7tYw15Qm_VAp4Yg&s"
                         class="card-img-center" alt="...">
-                    <div class="card-body">
-                    </div>
                 </div>
-                <div class="card p-2">
+                <div class="card p-0 m-2">
                     <img src="https://images.unsplash.com/photo-1641884179834-fc557eeff31b?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                         class="card-img-top" alt="...">
-                    <div class="card-body">
-                    </div>
                 </div>
-                <div class="card p-2">
+                <div class="card p-0 m-2">
                     <img src="https://puntogar.com/5065-large_default/esbd-estor-fotografico-screen-fibra-vidrio-5-sistema-38-y-43-mm-a-medida.jpg"
                         class="card-img-top" alt="...">
-                    <div class="card-body">
-                    </div>
                 </div>
             </div>
             <div class="card-group">
-                <div class="card p-2">
+                <div class="card p-0 m-2">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJll9sX91OnYxzJ_buaSc7tYw15Qm_VAp4Yg&s"
                         class="card-img-center" alt="...">
-                    <div class="card-body">
-                    </div>
                 </div>
-                <div class="card p-2">
+                <div class="card p-0 m-2">
                     <img src="https://images.unsplash.com/photo-1641884179834-fc557eeff31b?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                         class="card-img-top" alt="...">
-                    <div class="card-body">
-                    </div>
                 </div>
-                <div class="card p-2">
+                <div class="card p-0 m-2">
                     <img src="https://puntogar.com/5065-large_default/esbd-estor-fotografico-screen-fibra-vidrio-5-sistema-38-y-43-mm-a-medida.jpg"
                         class="card-img-top" alt="...">
-                    <div class="card-body">
-                    </div>
-                </div>
-            </div>
-            </div>
-            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                <!--carta sola-->
-                <div class="card-group m-auto">
-                    <div class="card1">
-                        <div class="card-body1">
-                            <p class="card-text">My crazy dog spark</p>
-                            <span>8/26</span>
-                        </div>
-                        <img src="https://hips.hearstapps.com/hmg-prod/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=0.752xw:1.00xh;0.175xw,0&resize=1200:*"
-                            class="card-img-top img-fluid" alt="...">
-                        <div class="card-body2">
-                            <p class="card-text"><b>204 likes</b>
-                                <br>
-                                This is an example of a very good photo that you can post on Instagram
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card1">
-                        <div class="card-body1">
-                            <p class="card-text">The greatness of my dog</p>
-                            <span>4/8</span>
-                        </div>
-                        <img src="https://images.unsplash.com/photo-1609075797584-c766367e5fc0?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                            class="card-img-top img-fluid" alt="...">
-                        <div class="card-body2">
-                            <p class="card-text"><b>203943 likes</b>
-                                <br>
-                                This is an example of a very good photo that you can post on Instagram
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card1">
-                        <div class="card-body1">
-                            <p class="card-text">Amazing!</p>
-                            <span>10/7</span>
-                        </div>
-                        <img src="https://images.unsplash.com/photo-1561495376-dc9c7c5b8726?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE5fHx8ZW58MHx8fHx8"
-                            class="card-img-top img-fluid" alt="...">
-                        <div class="card-body2">
-                            <p class="card-text"><b>1005 likes</b>
-                                <br>
-                                This is an example of a very good photo that you can post on Instagram
-                            </p>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
+        <div class="tab-pane fade m-auto" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <!--carta sola-->
+            <div class="card" style="col-sm">
+                <div class="card-body1">
+                    <p class="card-text"><h3>My crazy dog spark</h3></p>
+                    <span>8/26</span>
+                </div>
+                <img src="https://images.unsplash.com/photo-1561495376-dc9c7c5b8726?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE5fHx8ZW58MHx8fHx8"
+                    class="card-img-top" alt="...">
+                <div class="card-body2">
+                    <p class="card-text"><b>1005 likes</b>
+                        <br>
+                        This is an example of a very good photo that you can post on Instagram
+                    </p>
+                </div>
+            </div>
+            <br>
+            <div class="card" style="col-sm">
+                <div class="card-body1">
+                    <p class="card-text">The greatness of my dog</p>
+                    <span>1/10</span>
+                </div>
+                <img src="https://hips.hearstapps.com/hmg-prod/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=0.752xw:1.00xh;0.175xw,0&resize=1200:*"
+                    class="card-img-top" alt="...">
+                <div class="card-body2">
+                    <p class="card-text"><b>152 likes</b>
+                        <br>
+                        This is an example of a very good photo that you can post on Instagram
+                    </p>
+                </div>
+            </div>
+            <br>
+            <div class="card" style="col-sm">
+                <div class="card-body1">
+                    <p class="card-text">Amazing!</p>
+                    <span>8/26</span>
+                </div>
+                <img src="https://images.unsplash.com/photo-1561495376-dc9c7c5b8726?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE5fHx8ZW58MHx8fHx8"
+                    class="card-img-top" alt="...">
+                <div class="card-body2">
+                    <p class="card-text"><b>1005 likes</b>
+                        <br>
+                        This is an example of a very good photo that you can post on Instagram
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 
     </div>
