--- a/index.html
+++ b/index.html
@@ -200,14 +200,16 @@
         </div>
         <div class="tab-pane fade m-auto" id="profile" role="tabpanel" aria-labelledby="profile-tab">
             <!--carta sola-->
-            <div class="card" style="col-sm">
+            <div class="card card-no-border col-sm mb-2" style="border: none">
                 <div class="card-body1">
-                    <p class="card-text"><h3>My crazy dog spark</h3></p>
+                    <p class="card-text">
+                    <h3>My crazy dog spark</h3>
+                    </p>
                     <span>8/26</span>
                 </div>
                 <img src="https://images.unsplash.com/photo-1561495376-dc9c7c5b8726?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE5fHx8ZW58MHx8fHx8"
                     class="card-img-top" alt="...">
-                <div class="card-body2">
+                <div class="card-body2 card-no-border">
                     <p class="card-text"><b>1005 likes</b>
                         <br>
                         This is an example of a very good photo that you can post on Instagram
@@ -215,8 +217,8 @@
                 </div>
             </div>
             <br>
-            <div class="card" style="col-sm">
-                <div class="card-body1">
+            <div class="card card-no-border col-sm mb-2" style="border: none">
+                <div class="card-body1 card-no-border">
                     <p class="card-text">The greatness of my dog</p>
                     <span>1/10</span>
                 </div>
@@ -230,8 +232,8 @@
                 </div>
             </div>
             <br>
-            <div class="card" style="col-sm">
-                <div class="card-body1">
+            <div class="card card-no-border col-sm" style="border: none">
+                <div class="card-body1 card-no-border">
                     <p class="card-text">Amazing!</p>
                     <span>8/26</span>
                 </div>
