--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container-fluid">
         <!--Navbar-->
-        <nav class="navbar navbar-expand d-flex" style="background-color: #FAFAFB;">
+        <nav class="navbar navbar-expand d-flex bg-light navbar-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <i class="bi bi-instagram"></i>
@@ -24,7 +24,7 @@
                 </a>
             </div>
             <!-- Button trigger modal -->
-            <a class="button btn me-2 btn-success col-auto" class="btn btn-primary" data-bs-toggle="modal"
+            <a class="button btn me-2 btn-success col-auto btn btn-primary" data-bs-toggle="modal"
                 data-bs-target="#exampleModal">
                 Create a new post
             </a>
@@ -68,9 +68,7 @@
                     <li><a class="dropdown-item" href="#">Profile</a></li>
                     <li><a class="dropdown-item" href="#">Accesibility</a></li>
                     <li><a class="dropdown-item" href="#">Privacy and data</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
+                    <hr class="dropdown-divider">
                     <li><a class="dropdown-item text-danger" href="#">Log out</a></li>
                 </ul>
             </div>
@@ -200,48 +198,43 @@
         </div>
         <div class="tab-pane fade m-auto" id="profile" role="tabpanel" aria-labelledby="profile-tab">
             <!--carta sola-->
-            <div class="card" style="col-sm">
+            <div class="card col-sm">
                 <div class="card-body1">
-                    <p class="card-text"><h3>My crazy dog spark</h3></p>
+                    <h3 class="card-text">My crazy dog spark</h3>
                     <span>8/26</span>
                 </div>
                 <img src="https://images.unsplash.com/photo-1561495376-dc9c7c5b8726?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE5fHx8ZW58MHx8fHx8"
                     class="card-img-top" alt="...">
                 <div class="card-body2">
-                    <p class="card-text"><b>1005 likes</b>
-                        <br>
-                        This is an example of a very good photo that you can post on Instagram
-                    </p>
+                    <p class="card-text"><b>1005 likes</b></p>
+                    <p>This is an example of a very good photo that you can post on Instagram</p>
                 </div>
             </div>
             <br>
-            <div class="card" style="col-sm">
+            <div class="card col-sm">
                 <div class="card-body1">
-                    <p class="card-text">The greatness of my dog</p>
+                    <h3 class="card-text">The greatness of my dog</h3>
                     <span>1/10</span>
                 </div>
                 <img src="https://hips.hearstapps.com/hmg-prod/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=0.752xw:1.00xh;0.175xw,0&resize=1200:*"
                     class="card-img-top" alt="...">
                 <div class="card-body2">
-                    <p class="card-text"><b>152 likes</b>
-                        <br>
-                        This is an example of a very good photo that you can post on Instagram
-                    </p>
+                    <p class="card-text"><b>152 likes</b></p>
+                    <p>This is an example of a very good photo that you can post on Instagram</p>
+
                 </div>
             </div>
             <br>
-            <div class="card" style="col-sm">
+            <div class="card col-sm">
                 <div class="card-body1">
-                    <p class="card-text">Amazing!</p>
+                    <h3 class="card-text">Amazing!</h3>
                     <span>8/26</span>
                 </div>
                 <img src="https://images.unsplash.com/photo-1561495376-dc9c7c5b8726?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE5fHx8ZW58MHx8fHx8"
                     class="card-img-top" alt="...">
                 <div class="card-body2">
-                    <p class="card-text"><b>1005 likes</b>
-                        <br>
-                        This is an example of a very good photo that you can post on Instagram
-                    </p>
+                    <p class="card-text"><b>1005 likes</b></p>
+                    <p> This is an example of a very good photo that you can post on Instagram</p>
                 </div>
             </div>
         </div>
