--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid px-0">
         <!--Navbar-->
-        <nav class="navbar navbar-expand d-flex" style="background-color: #FAFAFB;">
+        <nav class="navbar navbar-expand d-flex" style="background-color:rgb(242, 242, 242);">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <i class="bi bi-instagram"></i>
+                    <i class="fa-brands fa-square-instagram"></i>
                     Instagram
                 </a>
             </div>
@@ -34,17 +37,17 @@
                 aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Create a new post</h5>
+                        <div class="modal-header bg-light text-dark">
+                            <h5 class="modal-title" id="exampleModalLabel">create a new post</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <h6>Caption:</h6>
+                            <h6>caption:</h6>
                             <textarea class="form-control" placeholder="Add the caption of your post here"
                                 id="floatingTextarea2"></textarea>
                             <div class="row p-2">
                                 <button class="col-1 border rounded p-1 m-1 btn-light">
-                                    <i class="bi bi-camera"></i>
+                                    <i class="fa-solid fa-camera"></i>
                                 </button>
                                 <button class="col-1 border rounded p-1 m-1 btn-light">
                                     <i class="bi bi-geo-alt-fill"></i>
@@ -60,7 +63,7 @@
             </div>
             <!--Settings-->
             <div class="dropdown">
-                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                <a class="btn btn-secondary dropdown-toggle me-2" href="#" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
                     <i class="bi bi-gear-fill"></i>
                 </a>
@@ -202,7 +205,9 @@
             <!--carta sola-->
             <div class="card" style="col-sm">
                 <div class="card-body1">
-                    <p class="card-text"><h3>My crazy dog spark</h3></p>
+                    <p class="card-text">
+                    <h3>My crazy dog spark</h3>
+                    </p>
                     <span>8/26</span>
                 </div>
                 <img src="https://images.unsplash.com/photo-1561495376-dc9c7c5b8726?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE5fHx8ZW58MHx8fHx8"
@@ -247,9 +252,7 @@
         </div>
     </div>
     </div>
-
     </div>
-
     </div>
 </body>
 
