--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--Date to end of line-->
+    <style>
+        .date {
+            text-align: end;
+            font-size: 15pt;
+        }
+    </style>
 </head>
 
 <body>
@@ -76,68 +83,7 @@
             </div>
         </nav>
     </div>
-    <!--Nav&tab-->
-    <!-- <div class="nav-tabs">
-        <ul class="nav nav-pills justify-content-center" id="pills-tab" role="tablist">
-            <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home"
-                    type="button" role="tab" aria-controls="pills-home" aria-selected="true"><i
-                        class="bi bi-grid-3x3"></i></button>
-            </li>
-            <li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile"
-                    type="button" role="tab" aria-controls="pills-profile" aria-selected="false"><i
-                        class="bi bi-square-fill"></i></button>
-            </li>
-        </ul>
-        <div class="tab-content" id="pills-tabContent">
-            <div class="row p-2" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
-                <div class="card1 col p-0 m-1">
-                    <div class="card-body1">
-                        <p class="card-text">My crazy dog spark</p>
-                        <span>8/26</span>
-                    </div>
-                    <img src="https://media.istockphoto.com/id/2151018944/photo/hertford-bridge-best-known-as-the-bridge-of-sighs-in-oxford-england.webp?b=1&s=612x612&w=0&k=20&c=jnukvB1j9_CnA7X3GxXaZutCPAjYAj5Vz71DGf6tLd0="
-                        class="card-img-top img-fluid" alt="...">
-                    <div class="card-body2">
-                        <p class="card-text"><b>204 likes</b>
-                            <br>
-                            This is an example of a very good photo that you can post on Instagram
-                        </p>
-                    </div>
-                </div>
-                <div class="card2 col p-0 m-1">
-                    <div class="card-body1">
-                        <p class="card-text">My crazy dog spark</p>
-                        <span>8/26</span>
-                    </div>
-                    <img src="https://img.freepik.com/foto-gratis/desarrollar-plantilla-web-codificacion-diseno-web-codificacion_53876-167109.jpg?t=st=1724887018~exp=1724890618~hmac=de139dca282a3188b130498bb8c4cf172789152fd0998f67bbf2963aab117aa3&w=740"
-                        class="card-img-top" alt="...">
-                    <div class="card-body2">
-                        <p class="card-text"><b>204 likes</b>
-                            <br>
-                            This is an example of a very good photo that you can post on Instagram
-                        </p>
-                    </div>
-                </div>
-                <div class="card3 col p-0 m-1">
-                    <div class="card-body1">
-                        <p class="card-text">My crazy dog spark</p>
-                        <span>8/26</span>
-                    </div>
-                    <img src="https://media.istockphoto.com/id/660776062/photo/chinese-asian-style-concrete-white-footbridge-over-river-in-public-oriental-gardens-on-sunny.webp?s=612x612&w=0&k=20&c=KeLVQjuOz409EVAU_uen1hCroTFogyZDlyIVCC7MyKw="
-                        class="card-img-top" alt="...">
-                    <div class="card-body2">
-                        <p class="card-text"><b>204 likes</b>
-                            <br>
-                            This is an example of a very good photo that you can post on Instagram
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">HOLA</div>
-        </div>
-    </div> -->
+
     <!--nuevo grid-->
     <ul class="nav nav-tabs justify-content-center my-4" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
@@ -202,8 +148,10 @@
             <!--carta sola-->
             <div class="card" style="col-sm">
                 <div class="card-body1">
-                    <p class="card-text"><h3>My crazy dog spark</h3></p>
-                    <span>8/26</span>
+                    <p class="card-text">
+                    <h4>My crazy dog spark</h4>
+                    </p>
+                    <p class="date">8/26</p>
                 </div>
                 <img src="https://images.unsplash.com/photo-1561495376-dc9c7c5b8726?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE5fHx8ZW58MHx8fHx8"
                     class="card-img-top" alt="...">
@@ -217,8 +165,10 @@
             <br>
             <div class="card" style="col-sm">
                 <div class="card-body1">
-                    <p class="card-text">The greatness of my dog</p>
-                    <span>1/10</span>
+                    <p class="card-text">
+                    <h4>The greatness of my dog</h4>
+                    </p>
+                    <p class="date">1/10</p>
                 </div>
                 <img src="https://hips.hearstapps.com/hmg-prod/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=0.752xw:1.00xh;0.175xw,0&resize=1200:*"
                     class="card-img-top" alt="...">
@@ -232,8 +182,10 @@
             <br>
             <div class="card" style="col-sm">
                 <div class="card-body1">
-                    <p class="card-text">Amazing!</p>
-                    <span>8/26</span>
+                    <p class="card-text">
+                    <h4>Amazing!</h4>
+                    </p>
+                    <p class="date">7/10</p>
                 </div>
                 <img src="https://images.unsplash.com/photo-1561495376-dc9c7c5b8726?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE5fHx8ZW58MHx8fHx8"
                     class="card-img-top" alt="...">
